<resources>
    <string name="app_name">Edution Lms Admin</string>
    <string name="status_dialog_title_no_internet">No Internet !</string>
    <string name="status_dialog_message_no_internet">You phone has no internet connection, Please enable the internet.</string>
    <string name="status_dialog_title_failed">Failed !</string>
    <string name="status_dialog_message_failed">Something went wrong, Please try again.</string>
    <string name="status_dialog_title_success">Success !</string>
    <string name="status_dialog_message_success">Your request has been successfully completed.</string>

    <!-- Error strings-->
    <string name="error_response">Some error occurred, try again later</string>
    <string name="corrupt_file">File cannot be opened, please contact support</string>
    <string name="start_test_error">Unable to start test</string>
    <string name="video_play_error">Some error occurred while playing video</string>
    <string name="video_not_available">Video not available</string>
    <string name="purchase_it">Purchase It</string>
    <string name="details_error">Unable to open Details</string>
    <string name="live_chat_error">Error connecting to Live Chat</string>
    <string name="live_chat_disconnected">Live chat is Disconnected</string>
    <string name="cant_connect_to_server">Cannot connect to server</string>
    <string name="no_test_found">No Test Found!</string>
    <string name="no_bought_test_found">No Test Purchased</string>
    <string name="no_pack_found">No Package Found!</string>
    <string name="live_chat_closed_by_admin">Chat has been\ndisabled</string>
    <string name="live_chat_active">Live-Chat is active</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="ok">status_ok</string>
    <string name="loading">Loading</string>
    <string name="do_not_have_and_account_create_account">do not have an account create here</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="password">Password</string>
    <string name="your_password">Your Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="create_here">Create Here</string>
    <string name="user_name">Your Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login_here">Login Here</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_continue">Sign Up to continue</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="mobile">Mobile</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="did_not_receive">Did not Receive?</string>
    <string name="otp_sent_to_your_n_mobile_number">OTP sent to your\n Mobile number</string>
    <string name="enter_otp_to_given_box">Enter otp to given box...</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_type_in_the_registered_mobile">Please type in the Registered mobile</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="please_type_your_new_password">Please type your new Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home_page">Home Page</string>
    <string name="full_stack_development">Full Stack Development</string>
    <string name="edution_learning">Edution Learning Admin</string>
    <string name="lecture_1_html_basic_structure">Lecture - 1 : html basic structure</string>
    <string name="choose_your_plan">Choose your plan</string>
    <string name="basic_plan">Basic Plan</string>
    <string name="choose_this_plan">Choose this Plan</string>
    <string name="full_course">FULL COURSE</string>
    <string name="rs">RS</string>
    <string name="ask_about_courses">Enquiry About Course</string>
    <string name="proceed_to_buy">Proceed to buy</string>
    <string name="phone_is_required_for_login">Phone is Required* for login</string>
    <string name="phone_number_is_not_valid">Phone number is not valid.</string>
    <string name="password_is_required_for_login">Password is Required* for login</string>
    <string name="name_is_required">Name is Required*</string>
    <string name="phone_is_required">Phone is Required*</string>
    <string name="password_must_be_four_digit">Password Must Be 4 digits*</string>
    <string name="re_enter_password_is_required">Re Enter Password is Required*</string>
    <string name="password_is_not_matched">Password is not matched*</string>
    <string name="selected">Selected</string>
    <string name="select">Select</string>
    <string name="refresh">Refresh</string>
    <string name="buy_a_course">Buy Course</string>
    <string name="you_do_not_have_any_course_you_would_like_to_buy_a_course">You do not have any course, you would\nlike to buy a course.</string>
    <string name="i_have_a_doubt">I have a Doubt in %s</string>
    <string name="purchased">Purchased</string>
    <string name="premium">Premium</string>
    <string name="notification">Notification</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="courseDetails">Course Details</string>
    <string name="banner">Banner</string>
    <string name="admin_access">Admin Access</string>

</resources>